--- a/index.css
+++ b/index.css
@@ -14,7 +14,14 @@
     gap: 6vw;
     padding-left: 5vw;
     height: 90%;
-
+    position: fixed;
+    background: white;
+    width: 40em;
+    height: 24em;
+    justify-self: center;
+    border-radius: 2%;
+    align-self: anchor-center;
+    box-shadow: 0.3em 0.3em 1em 0;
 
 
 
@@ -70,7 +77,7 @@ body {
 }
 
 .secretlink {
-
+width: 156px;
 position: fixed;
 top: 0.5em;
 right: 24em;
@@ -78,8 +85,9 @@ text-decoration: none;
     color: #3fa;
     text-shadow: 0.05em 0.05em 0.01em #777;
     font-weight: bold;
-    transition: color 0.5s;
 cursor: pointer;
+transition: all 0.5s;
+
 }
 #nanoman{
 background-color: #0b7777;
@@ -87,9 +95,11 @@ color: aqua;
 text-size-adjust: var(0.5em);
 font-size: 3em;
 font-family: 'Times New Roman', Times, serif;
-
+transition: all 0.4s;
 
 }
 #nanomanresetbutton{
-    background-color: #3e9999;
+    transition: all 0.7s;
+background-color: 3E9999;
+
 }
