--- a/index.css
+++ b/index.css
@@ -77,29 +77,52 @@ body {
 }
 
 .secretlink {
-width: 156px;
-position: fixed;
-top: 0.5em;
-right: 24em;
-text-decoration: none;
+    width: 156px;
+    position: fixed;
+    top: 0.5em;
+    right: 24em;
+    text-decoration: none;
     color: #3fa;
     text-shadow: 0.05em 0.05em 0.01em #777;
     font-weight: bold;
-cursor: pointer;
-transition: all 0.5s;
+    cursor: pointer;
+    transition: all 0.5s;
 
 }
-#nanoman{
-background-color: #0b7777;
-color: aqua;
-text-size-adjust: var(0.5em);
-font-size: 3em;
-font-family: 'Times New Roman', Times, serif;
-transition: all 0.4s;
+
+#nanoman {
+    background-color: #0b7777;
+    color: aqua;
+    text-size-adjust: var(0.5em);
+    font-size: 3em;
+    font-family: 'Times New Roman', Times, serif;
+    transition: all 0.4s;
 
 }
-#nanomanresetbutton{
+
+#nanomanresetbutton {
     transition: all 0.7s;
-background-color: 3E9999;
+    background-color: 3E9999;
 
 }
+
+.game-container {
+
+    display: flex;
+
+    gap: 6vw;
+    padding-left: 5vw;
+    height: 90%;
+    position: fixed;
+    background: rgb(34, 17, 147);
+    width: 40em;
+    height: 24em;
+    justify-self: center;
+    border-radius: 2%;
+    align-self: anchor-center;
+    box-shadow: 0.3em 0.3em 1em 0;
+
+
+}
+
+.game-canvas {}
